# docgenius

./: README.md  db_setup.py  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt
docgenius/: docgenius.py  ingest.py
docgenius.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_db.py  test_ingest.py
